--- a/css/style.css
+++ b/css/style.css
@@ -241,9 +241,11 @@ footer {
         grid-template-columns: repeat(3, 1fr); 
     }
     .cards {
-        max-width: 100%;
+        display: flex;
+        justify-content:space-evenly;
+        /* max-width: 100%;
         display: grid;
-        grid-template-columns: repeat(4, 1fr);
+        grid-template-columns: repeat(4, 1fr); */
     }
 }
 @media (min-width: 960px) {
@@ -252,10 +254,10 @@ footer {
         grid-template-columns: repeat(2, 1fr);
 
     }
+   
     #product .article-header {
         margin-top: 0;
         margin-left: 0;
-    
-          
+        
     }    
 }
